Updates to offline BP. Disables account and project creation.